extends Node2D


func _on_button_3_pressed():
	get_tree().change_scene_to_file("res://scenes/vault/main/vault.tscn")


func _on_button_1_pressed():
	OS.shell_open("https://youtu.be/0CFBUSHzENI?si=jtBJcWnzEG5VZeJJ&t=9")


func _on_button_2_pressed():
	OS.shell_open("https://www.youtube.com/watch?v=gUbWTVsRQAg")


func _on_button_4_pressed():
	OS.shell_open("https://www.youtube.com/watch?v=H7znRvtnwVY")


func _on_button_5_pressed():
	OS.shell_open("https://www.youtube.com/watch?v=GvM4_U9MvPk")


func _on_button_6_pressed():
	OS.shell_open("https://youtu.be/8hWVSvzh9os?si=_O6q53y5ndUtPKp4&t=32")


func _on_button_7_pressed():
	OS.shell_open("https://youtu.be/NjD0H4eBfng?si=39aaPHqiBkaSzFmm&t=60")


func _on_button_8_pressed():
	OS.shell_open("https://www.youtube.com/watch?v=OjNpRbNdR7E")


func _on_button_9_pressed():
	OS.shell_open("https://www.youtube.com/watch?v=mMGUdFV1GWs")
